# vyductan-react

./: .env.example  .eslintrc.cjs_  .git_  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  context7.json  eslint.config.ts  excalidraw.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  turbo.json
.claude/: settings.local.json
.git_backup/: COMMIT_EDITMSG  index
.github/: FUNDING.yml
@acme/: .gitignore
apps/: AGENTS.md
apps/manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/manager/src-tauri/src/: acme_sync.rs  lib.rs
components/: index.ts  package.json  tailwind.config.ts
components-pro/: index.ts  package.json  tailwind.config.ts
eslint/: base.js  drizzle.js  nextjs.js  package.json  react.js  tailwind.js  tsconfig.json  types.d.ts  unicorn.js
eslint-config/: AGENTS.md  base.ts  nextjs.ts  package.json  react.ts  types.d.ts
github/: AGENTS.md
hooks/: eslint.config.js  eslint.config.ts  index.ts  package.json  tsconfig.json
icons/: ArrowDownFilled.tsx  ArrowLeftOutlined.tsx  ArrowRightOutlined.tsx  CheckOutlined.tsx  ChevronRightOutlined.tsx  CircleFilled.tsx  CircleOutlined.tsx  CloseOutlined.tsx  DeleteOutlined.tsx  Icon.tsx  LogoutOutlined.tsx  MailOutlined.tsx  UserOutlined.tsx  WarningFilled.tsx  Wrapper.tsx  index.ts  index.tsx  package.json  tsconfig.json
patches/: radix-ui@1.4.3.patch
prettier/: index.js  package.json
prettier-config/: AGENTS.md  index.js  package.json
tailwind/: base.ts  (+13 more)
tailwind-config/: colors.css  colors.ts_  globals.css  package.json  shadcn.css  token.css
(+2630 files in other folders)
